# CHIP-8_Emulator

./: CMakeLists.txt  README.md
src/: Chip8.cpp  Chip8.hpp  Platform.cpp  Platform.hpp  main.cpp
